--- a/urban-octo-barnacle.cabal
+++ b/urban-octo-barnacle.cabal
@@ -21,6 +21,8 @@ library
 
   build-depends:       base-noprelude ^>= 4.12.0.0
                      , base-prelude
+                     , gloss
+                     , coercible-utils
 
   ghc-options:         -Wall
                        -Wincomplete-uni-patterns
@@ -29,7 +31,6 @@ library
                        -Widentities
                        -Wredundant-constraints
                        -fhide-source-paths
-                       -Wmissing-export-lists
                        -Wpartial-fields
 
   default-language:    Haskell2010
@@ -52,7 +53,6 @@ executable urban-octo-barnacle
                        -Widentities
                        -Wredundant-constraints
                        -fhide-source-paths
-                       -Wmissing-export-lists
                        -Wpartial-fields
 
   default-language:    Haskell2010
@@ -76,7 +76,6 @@ test-suite urban-octo-barnacle-test
                        -Widentities
                        -Wredundant-constraints
                        -fhide-source-paths
-                       -Wmissing-export-lists
                        -Wpartial-fields
 
   default-language:    Haskell2010
