--- a/urban-octo-barnacle.cabal
+++ b/urban-octo-barnacle.cabal
@@ -18,6 +18,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     UrbanOctoBarnacle
                        Prelude
+                       Types
 
   build-depends:       base-noprelude ^>= 4.12.0.0
                      , base-prelude
